# CCU_WiFiMesh

./: CMakeLists.txt  DOCUMENTATION_UPDATE_SUMMARY.md  README-FWextensive.md  README.md  flash_unit_id.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: copilot-instructions.md
Dashboard/: AWS-DEPLOYMENT.md  README.md  SETUP-LOCAL-WINDOWS.md  bumblebee-flowfuse-dashboard.json  docker-compose.yml  start-bumblebee.bat
Dashboard/mosquitto/: ca.crt
Dashboard/mosquitto/config/: mosquitto.conf
Dashboard/nginx/: nginx.conf
Dashboard/nodered/: settings.js
Dashboard/telegraf/: telegraf.conf
main/: CMakeLists.txt  Kconfig.projbuild  aux_ctu_hw.c  cru_hw.c  idf_component.yml  led_strip.c  leds.c  main.c  mqtt_client_manager.c  ota_manager.c  peer.c  util.c  wifiMesh.c
main/include/: aux_ctu_hw.h  cru_hw.h  led_strip.h  leds.h  mqtt_client_manager.h  ota_manager.h  peer.h  unitID.h  util.h  wifiMesh.h
